--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>com.icictech</groupId>
   <artifactId>webappicici</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>webappicici</name>
   <!-- FIXME change it to the project's website -->
